# myapp-main

./: ATHANNI_ROADMAP.md  CLAUDE_CONTEXT.md  HOW_TO_RUN.md  MASTER_PROGRESS.md  PENDING_DECISIONS.md  design_guidelines.json  render.yaml  start.sh
.emergent/: emergent.yml
backend/: ai_service.py  brand_data.py  default_model.joblib  email_service.py  main.py  ml_drift.py  ml_service.py  ml_trainer.py  pyproject.toml  pytest.ini  railway.toml  requirements.txt  risk_engine.py  seed_admin.py  seed_demo.py  server.py  storage_service.py  stripe_service.py
backend/app/: __init__.py  config.py  db.py  deps.py  enums.py  main.py  security.py
backend/app/repos/: __init__.py  agencies_repo.py  base.py  brands_repo.py  contracts_repo.py  creators_repo.py  deals_repo.py  emails_repo.py  events_repo.py  social_repo.py  transactions_repo.py  users_repo.py
backend/app/routers/: __init__.py  admin.py  auth.py  brands.py  contracts.py  creator.py  dashboard.py  deals.py  payments.py  seed.py
backend/app/schemas/: __init__.py  agency.py  auth.py  brand.py  creator.py  deal.py  user.py
backend/app/services/: contract_parser.py  credit_limit.py  payout_service.py
backend/app/services/ai/: __init__.py  _logger.py  factory.py  interfaces.py
backend/app/services/ai/brand_intelligence/: base.py  mock_provider.py  real_provider.py
backend/app/tests/: conftest.py
backend/app/tests/unit/: test_auth_router.py  test_factory_swap.py  test_repos.py  test_risk_decision_engine.py
backend/tests/: test_iter4_refactor.py  test_mypay_api.py  test_phase2_api.py  test_phase3_api.py
(+47 files in other folders)
